- auth and register begins - db select add conditions - render page by response driver - response driver and codes - update css to fix title pagination on mobile

--- a/public/css/layouts/blog.css
+++ b/public/css/layouts/blog.css
@@ -40,7 +40,7 @@ h3 {
 
 .brand-title,
 .brand-tagline {
-    margin: 0;
+    margin: 0 1em;
 }
 .brand-title a {
     text-transform: uppercase;
@@ -168,6 +168,11 @@ h3 {
     .header {
         margin: 80% 2em 0;
         text-align: right;
+    }
+
+    .header .brand-title,
+    .header .brand-tagline {
+        margin: 0;
     }
 
     .sidebar {
